# crisprme2-columnar

./: .gitignore  Cargo.toml  README.md
columnar/: Cargo.toml
columnar-bin/: Cargo.toml  main.py  pyproject.toml
columnar-bin/src/: main.rs
columnar-derive/: Cargo.toml
columnar-derive/src/: lib.rs  parse.rs  repr.rs
columnar-derive/src/codegen/: mod.rs  pyclass.rs  schema.rs  soa.rs
columnar-python/: Cargo.toml  main.py  pyproject.toml
columnar-python/src/: lib.rs
columnar-python/tests/: test_pipeline.py
columnar-tests/: Cargo.toml
columnar-tests/src/: main.rs  sequence.rs
columnar/src/: buffer.rs  lib.rs  pipeline.rs  ring.rs  tests.rs
columnar/src/ext/: mod.rs  pyo3.rs
