[package]
name = "columnar-python"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "columnar_python"
crate-type = ["cdylib"]

[dependencies]
columnar = { path = "../columnar", features = [ "pyo3" ] }
bytemuck = "1.25.0"
pyo3 = "0.28.2"
