[package]
name = "columnar"
version = "0.0.0"
edition = "2024"

[features]
pyo3 = [ "dep:pyo3" ]

[dependencies]
columnar-derive = { path = "../columnar-derive" }
bytemuck = { version = "1.25.0", features = ["derive"] }
pyo3 = { version = "0.28.2", optional = true }

# Re-export the derive macro
[package.metadata]
